--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ken Kantzer (ken@pkcsecurity.com)",
-  "license": "BSD-3-Clause",
+  "license": "MIT",
   "dependencies": {
     "csv-parse": "^1.2.0",
     "domain-name-parser": "^2.3.0"
